tests/NormalTests/paczka1/small_fuzzy/90461588.err
Error in line 1: nrCeiA2 A568 63,6
Error in line 5: A759 S932 56,82
Error in line 3: A759 A568 52,3
Error in line 7: Ure1D A983 90,0
